fixed text alignment on slides

--- a/app/src/angular-kaarousel.less
+++ b/app/src/angular-kaarousel.less
@@ -55,6 +55,7 @@
 				float: none;
 
 				white-space: normal;
+				text-align: left;
 
 				img {
 					pointer-events: none
